--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,9 @@
 {
   "name": "Hubbe Garden",
   "short_name": "Hubbe",
-  "start_url": "./",
+  "start_url": "/Hubbegarden/",
+  "scope": "/Hubbegarden/",
   "display": "standalone",
   "background_color": "#FEFAE0",
-  "theme_color": "#606C38",
-  "orientation": "portrait",
-  "icons": [
-    {
-      "src": "icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "theme_color": "#606C38"
 }
